--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   "author": "kasia rosenberg",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mongo": "^0.1.0",
+    "mongodb": "^3.0.4",
+    "mongoose": "^5.0.11"
   }
 }
