--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "ejs": "^2.5.7",
     "express": "^4.16.3",
     "express-sanitizer": "^1.0.3",
+    "method-override": "^2.3.10",
+    "moment": "^2.21.0",
     "mongo": "^0.1.0",
     "mongodb": "^3.0.4",
     "mongoose": "^5.0.11"
